--- a/pom.xml
+++ b/pom.xml
@@ -6,22 +6,21 @@
 
     <groupId>com.github.greengerong</groupId>
     <artifactId>toggle</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>toggle-common</module>
+        <module>toggle-spring-boot-starter</module>
+    </modules>
 
     <properties>
         <assertj-core.version>3.10.0</assertj-core.version>
-        <aspectjrt.version>1.8.9</aspectjrt.version>
         <junit.version>4.12</junit.version>
         <mockito.version>1.9.5</mockito.version>
         <jdk.version>8</jdk.version>
     </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>org.aspectj</groupId>
-            <artifactId>aspectjrt</artifactId>
-            <version>${aspectjrt.version}</version>
-        </dependency>
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
