[greengerong] jdbc with cache

--- a/toggle-spring-sample/pom.xml
+++ b/toggle-spring-sample/pom.xml
@@ -23,6 +23,8 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
         <spring-aspects.version>5.0.8.RELEASE</spring-aspects.version>
+        <toggle-spring-boot-starter.version>1.0-SNAPSHOT</toggle-spring-boot-starter.version>
+        <guava.version>25.1-jre</guava.version>
     </properties>
 
     <dependencies>
@@ -35,6 +37,15 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
@@ -55,7 +66,12 @@
         <dependency>
             <groupId>com.github.greengerong</groupId>
             <artifactId>toggle-spring-boot-starter</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>${toggle-spring-boot-starter.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>${guava.version}</version>
         </dependency>
     </dependencies>
 
