--- a/toggle-spring-sample/src/main/resources/application.yml
+++ b/toggle-spring-sample/src/main/resources/application.yml
@@ -4,10 +4,15 @@ server:
   servlet:
     context-path: /api
 
-
+spring:
+  datasource:
+    url: jdbc:mysql://localhost:3308/feature_toggle?verifyServerCertificate=false&useSSL=false&requireSSL=false
+    username: root
+    password: 123456
+    driver-class-name: com.mysql.jdbc.Driver
 
 feature-toggle:
-#  storage: jdbc
+  storage: jdbc
   features:
     foo: false
     bar: true
@@ -17,6 +22,7 @@ management:
     web:
       exposure:
         include: health, info, feature-toggle
+
 
 
 
