--- a/toggle-spring-sample/src/main/resources/application.yml
+++ b/toggle-spring-sample/src/main/resources/application.yml
@@ -12,7 +12,7 @@ spring:
     driver-class-name: com.mysql.jdbc.Driver
 
 feature-toggle:
-  storage: jdbc
+#  storage: jdbc
   features:
     foo: false
     bar: true
