--- a/samples/toggle-spring-jdbc-sample/pom.xml
+++ b/samples/toggle-spring-jdbc-sample/pom.xml
@@ -1,15 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <groupId>com.github.greengerong</groupId>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.github.greengerong</groupId>
-    <artifactId>toggle-spring-sample</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <packaging>jar</packaging>
-
-    <name>toggle-spring-sample</name>
-    <description>Demo project for Spring Boot</description>
+    <artifactId>toggle-spring-jdbc-sample</artifactId>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -37,6 +33,10 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
@@ -74,6 +74,5 @@
             </plugin>
         </plugins>
     </build>
-
 
 </project>
